# vertex-veil

./: .gitignore  AGENTS.md  Cargo.toml  README.md
circuits/: Nargo.toml  README.md
circuits/provider/: Nargo.toml
circuits/provider/src/: main.nr
circuits/requester/: Nargo.toml  Prover.toml
circuits/requester/src/: main.nr
circuits/shared/: Nargo.toml
circuits/shared/src/: lib.nr
crates/vertex-veil-agents/: Cargo.toml
crates/vertex-veil-agents/src/: lib.rs  main.rs  node.rs  orchestrate.rs  private_intents.rs  run.rs  vertex_transport.rs
crates/vertex-veil-agents/tests/: cli_bootstrap.rs  demo_bundle.rs
crates/vertex-veil-core/: Cargo.toml
crates/vertex-veil-core/src/: adversarial.rs  artifacts.rs  candidate.rs  capability.rs  commitments.rs  config.rs  error.rs  keys.rs  lib.rs  parity.rs  predicate.rs  private_intent.rs  proposer.rs  round_machine.rs  runtime.rs  shared_types.rs  signing.rs  verifier.rs
crates/vertex-veil-core/tests/: adversarial.rs  artifacts.rs  capability_tags.rs  commitments.rs  config.rs  noir_bridge.rs  predicate_parity.rs  predicate_runtime.rs  proofs.rs  proposer.rs  round_state.rs  runtime_log.rs  shared_types.rs  verifier.rs
crates/vertex-veil-noir/: Cargo.toml
crates/vertex-veil-noir/src/: lib.rs  provider.rs  requester.rs
crates/vertex-veil-noir/tests/: proofs_barretenberg.rs
fixtures/: abort-drop-all-providers.toml  fallback-recovery.toml  replay-doublecommit-drop.toml  scenario-bft-rejoin.toml  topology-4node-gpu-only.private.toml  topology-4node-gpu-only.toml  topology-4node.private.toml  topology-4node.toml  topology-6node.private.toml  topology-6node.toml  topology-custom-tags.toml  topology-duplicate-ids.toml  topology-empty-providers.toml  topology-single-tag.toml
fixtures/parity/: custom_label.json  happy_gpu.json  no_match_cpu.json  role_mismatch.json  round_mismatch.json  tampered_identity.json
intent/: INTENT.md  TASK.yaml  decisions.md  plan.md
