[workspace]
resolver = "2"
members = [
    "crates/vertex-veil-core",
    "crates/vertex-veil-agents",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
