[workspace]
resolver = "2"
members = [
    "crates/vertex-veil-core",
    "crates/vertex-veil-agents",
    "crates/vertex-veil-noir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"
clap = { version = "4", features = ["derive"] }
# Ed25519 signing for completion receipts (Phase 4).
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
