[package]
name = "vertex-veil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core protocol types, configuration, and public coordination artifact schema for Vertex Veil."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
